Bug 50411 - [patch] the English word "tessellator" is spelt wrong in the code
Summary: [patch] the English word "tessellator" is spelt wrong in the code
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.12.2
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-27 23:13 UTC by Homer Hsing
Modified: 2014-02-27 02:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Homer Hsing 2012-05-27 23:13:10 UTC
Hi, the English word "tessellator" is spelt wrong in the code. Here is the patch   to correct the typo.

diff --git a/src/cairo-fixed-private.h b/src/cairo-fixed-private.h
index b6cc6be..f4a0c23 100644
--- a/src/cairo-fixed-private.h
+++ b/src/cairo-fixed-private.h
@@ -45,7 +45,7 @@
 
 #if (CAIRO_FIXED_BITS != 32)
 # error CAIRO_FIXED_BITS must be 32, and the type must be a 32-bit type.
-# error To remove this limitation, you will have to fix the tesselator.
+# error To remove this limitation, you will have to fix the tessellator.
 #endif
 
 #define CAIRO_FIXED_ONE        ((cairo_fixed_t)(1 << CAIRO_FIXED_FRAC_BITS))
diff --git a/src/cairo-fixed-type-private.h b/src/cairo-fixed-type-private.h
index 2bbd5f7..e9f26f6 100644
--- a/src/cairo-fixed-type-private.h
+++ b/src/cairo-fixed-type-private.h
@@ -50,7 +50,7 @@ typedef cairo_int128_t        cairo_fixed_64_64_t;
 typedef cairo_int128_t cairo_fixed_96_32_t;
 
 /* Eventually, we should allow changing this, but I think
- * there are some assumptions in the tesselator about the
+ * there are some assumptions in the tessellator about the
  * size of a fixed type.  For now, it must be 32.
  */
 #define CAIRO_FIXED_BITS       32
Comment 1 Bryce Harrington 2014-02-27 02:55:21 UTC
I think that tesselator may be an accepted alternate spelling, or perhaps its the British spelling.  Googling isn't giving me a definitive answer on that though.

In any case, even if it is the British spelling, it seems Cairo follows US spelling conventions (e.g. 'colour' shows up only once in src/*.*, vs 1632 times for 'color').

Plus, the API includes _cairo_traps_tessellate_*, _cairo_bentley_ottmann_tessellate_*, etc. so the double-ell spelling appears to be more standard.

I'm seeing a few other places with the single-ell spelling; I'll fix them all while I'm at it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.